All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/RMA_Line_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>RMA_Line_Price_Book__c</fullName>
    <description>Not used</description>
    <label>RMA Line Price Book</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>