All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/SC_Activation_Messages__c.field-meta.xml
<CustomField>
    <fullName>SC_Activation_Messages__c</fullName>
    <description>Field labels and messages dispalyed for Service Contracts Activation module.</description>
    <inlineHelpText>Field labels and messages dispalyed for Service Contracts Activation module.</inlineHelpText>
    <label>SC Activation Messages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MSG001</fullName>
            </value>
            <value>
                <fullName>MSG002</fullName>
            </value>
            <value>
                <fullName>MSG003</fullName>
            </value>
            <value>
                <fullName>MSG004</fullName>
            </value>
            <value>
                <fullName>MSG005</fullName>
            </value>
            <value>
                <fullName>LAB000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>