All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Search_Order_3__c.field-meta.xml
<CustomField>
    <fullName>Search_Order_3__c</fullName>
    <description>Field to define which configuration profile value will take THIRD preference if more than three configuration profiles are found for a setting.</description>
    <inlineHelpText>Field to define which configuration profile value will take THIRD preference if more than three configuration profiles are found for a setting.</inlineHelpText>
    <label>Search Order 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>