All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Serial_Selection_Messages__c.field-meta.xml
<CustomField>
    <fullName>Serial_Selection_Messages__c</fullName>
    <description>Labels and messages used in Serial selection module in inventory.</description>
    <inlineHelpText>Labels and messages used in Serial selection module in inventory.</inlineHelpText>
    <label>Serial Selection Messages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>LAB000</fullName>
            </value>
            <value>
                <fullName>LAB001</fullName>
            </value>
            <value>
                <fullName>LAB002</fullName>
            </value>
            <value>
                <fullName>LAB003</fullName>
            </value>
            <value>
                <fullName>LAB004</fullName>
            </value>
            <value>
                <fullName>LAB005</fullName>
            </value>
            <value>
                <fullName>LAB006</fullName>
            </value>
            <value>
                <fullName>LAB007</fullName>
            </value>
            <value>
                <fullName>LAB008</fullName>
            </value>
            <value>
                <fullName>LAB009</fullName>
            </value>
            <value>
                <fullName>LAB010</fullName>
            </value>
            <value>
                <fullName>LAB011</fullName>
            </value>
            <value>
                <fullName>LAB012</fullName>
            </value>
            <value>
                <fullName>LAB013</fullName>
            </value>
            <value>
                <fullName>LAB014</fullName>
            </value>
            <value>
                <fullName>LAB015</fullName>
            </value>
            <value>
                <fullName>MSG001</fullName>
            </value>
            <value>
                <fullName>MSG002</fullName>
            </value>
            <value>
                <fullName>MSG003</fullName>
            </value>
            <value>
                <fullName>MSG004</fullName>
            </value>
            <value>
                <fullName>MSG005</fullName>
            </value>
            <value>
                <fullName>MSG006</fullName>
            </value>
            <value>
                <fullName>MSG007</fullName>
            </value>
            <value>
                <fullName>MSG008</fullName>
            </value>
            <value>
                <fullName>MSG009</fullName>
            </value>
            <value>
                <fullName>MSG010</fullName>
            </value>
            <value>
                <fullName>MSG011</fullName>
            </value>
            <value>
                <fullName>MSG012</fullName>
            </value>
            <value>
                <fullName>MSG013</fullName>
            </value>
            <value>
                <fullName>MSG014</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>