All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Show_Expired_Entitlements__c.field-meta.xml
<CustomField>
    <fullName>Show_Expired_Entitlements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if expired warranties and service contracts should be displayed on the entitlement screen.</description>
    <inlineHelpText>Flag indicates if expired warranties and service contracts should be displayed on the entitlement screen.</inlineHelpText>
    <label>Show Expired Entitlements</label>
    <type>Checkbox</type>
</CustomField>