All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Submodule__c.field-meta.xml
<CustomField>
    <fullName>Submodule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ServiceMax sub module in which this setting is used. Lookup to ServiceMax process: Record Type &apos;Submodule&apos;</description>
    <inlineHelpText>ServiceMax sub module in which this setting is used. Lookup to ServiceMax process: Record Type &apos;Submodule&apos;</inlineHelpText>
    <label>Submodule</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Settings</relationshipLabel>
    <relationshipName>ServiceMax_Configuration2</relationshipName>
    <type>Lookup</type>
</CustomField>