All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Validate_Address__c.field-meta.xml
<CustomField>
    <fullName>Validate_Address__c</fullName>
    <description>Labels and messages displayed in Validate Address module used in Service Team,Technician/Equipment.</description>
    <inlineHelpText>Labels and messages displayed in Validate Address module used in Service Team,Technician/Equipment.</inlineHelpText>
    <label>Validate Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LAB000</fullName>
            </value>
            <value>
                <fullName>LAB001</fullName>
            </value>
            <value>
                <fullName>MSG001</fullName>
            </value>
            <value>
                <fullName>MSG002</fullName>
            </value>
            <value>
                <fullName>MSG003</fullName>
            </value>
            <value>
                <fullName>MSG004</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>