All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Validate_Address_Messages__c.field-meta.xml
<CustomField>
    <fullName>Validate_Address_Messages__c</fullName>
    <description>Field labels and messages dispalyed for Validate Address module.</description>
    <inlineHelpText>Field labels and messages dispalyed for Validate Address module.</inlineHelpText>
    <label>Validate Address Messages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LAB000</fullName>
            </value>
            <value>
                <fullName>LAB001</fullName>
            </value>
            <value>
                <fullName>MSG001</fullName>
            </value>
            <value>
                <fullName>MSG002</fullName>
            </value>
            <value>
                <fullName>MSG003</fullName>
            </value>
            <value>
                <fullName>MSG004</fullName>
            </value>
            <value>
                <fullName>MSG005</fullName>
            </value>
            <value>
                <fullName>MSG006</fullName>
            </value>
            <value>
                <fullName>LAB002</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>