All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <description>List of values allowed for this setting, where applicable.  Uses special delimiter (~|~ ) when multiple values are entered.</description>
    <inlineHelpText>List of values allowed for this setting, where applicable.  Use special delimiter (~|~ ) when multiple values are entered.</inlineHelpText>
    <label>Values</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>