All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Warranty_On_IB_Creation__c.field-meta.xml
<CustomField>
    <fullName>Warranty_On_IB_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create warranty on Installed Product creation</description>
    <inlineHelpText>Create warranty on Installed Product creation</inlineHelpText>
    <label>Create Warranty On IB create</label>
    <type>Checkbox</type>
</CustomField>