All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Warranty_On_IB_update__c.field-meta.xml
<CustomField>
    <fullName>Warranty_On_IB_update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create warranty on Installed Product update</description>
    <inlineHelpText>Create warranty on Installed Product update</inlineHelpText>
    <label>Create Warranty On IB update</label>
    <type>Checkbox</type>
</CustomField>